--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "express": "^4.19.2",
     "ioredis": "^5.4.1",
     "javascript-time-ago": "^2.5.10",
+    "openai": "^4.45.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "uuid": "^9.0.1",
